[package]
name = "coomer-dl-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
futures = "0.3.31"
governor = "0.8.0"
indicatif = "0.17.11"
reqwest = { version = "0.12.12", features = ["stream", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
sanitize-filename = "0.6.0"
